--- a/frontend/src/app/hero-detail/hero-detail.component.html
+++ b/frontend/src/app/hero-detail/hero-detail.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="hero">
+	<div>HERO: {{ hero }} HERO.ID: {{ hero.id }} HERO.NAME {{ hero.name }}</div>
 	<h2>{{hero.name | uppercase}} Details</h2>
 	<div><span>id: </span>{{hero.id}}</div>
 	<div>
