setup auth for front end only, about to work on backend and link them

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,15 @@
 <h1>{{title}}</h1>
-<nav>
-	<a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/heroes">Heroes</a>
-</nav>
+<div *ngIf="!authService.isAuthenticated()">
+  <nav>
+    <a (click)="authService.login()">Log In</a>
+  </nav>
+</div>
+<div *ngIf="authService.isAuthenticated()">
+  <nav>
+    <a (click)="authService.logout()">Log Out</a>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/heroes">Heroes</a>
+  </nav>
+</div>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
