--- a/frontend/src/app/hero-detail/hero-detail.component.html
+++ b/frontend/src/app/hero-detail/hero-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="hero">
+<div class="test-hero" *ngIf="hero">
   <h2>{{hero.name | uppercase}} Details</h2>
   <div><span>id: </span>{{hero.id}}</div>
   <div>
